# rauth

./: .gitignore
backend/: .gitignore  Cargo.toml
backend-domain-auth/: .gitignore  Cargo.toml
backend-domain-auth/migrations/2024-03-25-012844_create_users/: up.sql
backend-domain-auth/migrations/2024-03-25-012900_create_groups/: up.sql
backend-domain-auth/migrations/2024-03-25-013315_create_url_rules/: up.sql
backend-domain-auth/src/: api_error.rs  auth_middleware.rs  helpers.rs  main.rs  route_guards.rs  schema.rs
backend/data/: auth.db
backend/migrations/2024-03-25-012844_create_users/: up.sql
backend/migrations/2024-03-25-012900_create_groups/: up.sql
backend/migrations/2024-03-25-013315_create_url_rules/: down.sql
backend/migrations/2024-03-25-013318_create_domain_rules/: down.sql
backend/migrations/2024-03-25-013800_create_groups_users/: down.sql  up.sql
backend/migrations/2024-03-27-180300_create_roles_users/: down.sql
backend/migrations/2024-03-27-203038_create_jwt/: down.sql
backend/src/: api_error.rs  helpers.rs  main.rs  schema.rs
backend/src/middlewares/: authentication_middleware.rs  mod.rs  target_user_or_super_user_middleware.rs
backend/src/models/: group_model.rs  group_user_model.rs  jwt_model.rs  mod.rs  role_model.rs  role_user_model.rs  url_rule_model.rs  user_model.rs
backend/src/routes/: auth_routes.rs  group_routes.rs  mod.rs  rules_routes.rs  user_routes.rs
frontend/: bun.lockb  package.json  vite.config.ts
frontend-domain-auth/: LICENSE-MIT  README.md
frontend/src/: App.vue  SuspendedApp.vue  main.ts
(+45 files in other folders)
