[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4.5"
dotenvy = "0.15"
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
jsonwebtoken = { version = "9.3"}
chrono = "0.4"
uuid = {version = "1.8", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]}
url = "2.5"
env_logger = "0.11"
log = "0.4"
futures = "0.3.30"
bcrypt = "0.15"
actix-cors = "0.7"